FIX Optimize the response of login